--- a/regression.ipynb
+++ b/regression.ipynb
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "==================================================================================================================\n",
       "Validation Data:\n"
      ]
     },
@@ -962,7 +961,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "==================================================================================================================\n",
       "Testing Data:\n"
      ]
     },
@@ -1260,12 +1258,10 @@
     "# Display the training data\n",
     "print(\"Train Data:\")\n",
     "display(train_data)\n",
-    "print(\"==================================================================================================================\")\n",
     "\n",
     "# Display the validation data\n",
     "print(\"Validation Data:\")\n",
     "display(valid_data)\n",
-    "print(\"==================================================================================================================\")\n",
     "\n",
     "# Display the test data\n",
     "print(\"Testing Data:\")\n",
@@ -1307,12 +1303,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task 2.1: Testing each type of regression"
+    "Task 2.1: Training & Testing a test sample on the regression types"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1326,7 @@
     "from sklearn.linear_model import LinearRegression,Ridge,Lasso\n",
     "\n",
     "linear_Reg = LinearRegression()\n",
-    "Lasso_Reg = Lasso(max_iter=10000000)\n",
+    "Lasso_Reg = Lasso(max_iter=100000)\n",
     "Ridge_Reg = Ridge()\n",
     "\n",
     "linear_Reg.fit(x_train, y_train)\n",
@@ -1357,22 +1353,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LinearRegression,Ridge,Lasso\n",
     "\n",
     "linear_Reg = LinearRegression()\n",
-    "Lasso_Reg = Lasso(max_iter=10000000)\n",
+    "Lasso_Reg = Lasso(max_iter=100000)\n",
     "Ridge_Reg = Ridge()\n",
     "\n",
-    "# Train the model on the training data\n",
+    "# Train the model using the training dataset\n",
     "linear_Reg.fit(x_train, y_train)\n",
     "Lasso_Reg.fit(x_train, y_train)\n",
     "Ridge_Reg.fit(x_train, y_train)\n",
     "\n",
-    "# Predicting \n",
+    "# Predicting using the validation dataset\n",
     "y_pred_linear = linear_Reg.predict(x_valid)\n",
     "y_pred_lasso = Lasso_Reg.predict(x_valid)\n",
     "y_pred_ridge = Ridge_Reg.predict(x_valid)"
@@ -1386,8 +1382,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Task 3.1: Calculating MAE & MSE for each regression type"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
+    "\n",
+    "# Calculate MAE and MSE for each regression model\n",
+    "MAE_linear = mean_absolute_error(y_valid, y_pred_linear)\n",
+    "MSE_linear = mean_squared_error(y_valid, y_pred_linear)\n",
+    "\n",
+    "MAE_lasso = mean_absolute_error(y_valid, y_pred_lasso)\n",
+    "MSE_lasso = mean_squared_error(y_valid, y_pred_lasso)\n",
+    "\n",
+    "MAE_ridge = mean_absolute_error(y_valid, y_pred_ridge)\n",
+    "MSE_ridge = mean_squared_error(y_valid, y_pred_ridge)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Task 3.2: Displaying MAE & MSE for each regression type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1451,19 +1481,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
-    "\n",
-    "# Calculate MAE and MSE for each regression model\n",
-    "MAE_linear = mean_absolute_error(y_valid, y_pred_linear)\n",
-    "MSE_linear = mean_squared_error(y_valid, y_pred_linear)\n",
-    "\n",
-    "MAE_lasso = mean_absolute_error(y_valid, y_pred_lasso)\n",
-    "MSE_lasso = mean_squared_error(y_valid, y_pred_lasso)\n",
-    "\n",
-    "MAE_ridge = mean_absolute_error(y_valid, y_pred_ridge)\n",
-    "MSE_ridge = mean_squared_error(y_valid, y_pred_ridge)\n",
-    "\n",
     "# Create a DataFrame to display the results\n",
     "data = {\n",
     "    'Model': ['Linear Regression', 'Lasso Regression', 'Ridge Regression'],\n",
@@ -1472,8 +1489,9 @@
     "}\n",
     "\n",
     "results_df = pd.DataFrame(data)\n",
+    "\n",
     "# Display the results in a tabular format\n",
-    "display(results_df)\n"
+    "display(results_df)"
    ]
   }
  ],
