--- a/regression.ipynb
+++ b/regression.ipynb
@@ -1359,7 +1359,7 @@
    "source": [
     "from sklearn.linear_model import LinearRegression,Ridge,Lasso\n",
     "\n",
-    "linear_Reg = LinearRegression()\n",
+    "linear_Reg = LinearRegression(copy_X=True,fit_intercept=False)\n",
     "Lasso_Reg = Lasso(max_iter=100000)\n",
     "Ridge_Reg = Ridge()\n",
     "\n",
