--- a/regression.ipynb
+++ b/regression.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
        "[20640 rows x 14 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1308,17 +1308,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predection using Linear Regression: [111105.47631389]\n",
-      "Predection using Lasso Regression:  [111099.39334366]\n",
-      "Predection using Ridge Regression:  [111091.77617175]\n",
-      "Correct value is: 100000.0\n"
+      "Predection using Linear Regression: [113660.90240396]\n",
+      "Predection using Lasso Regression:  [113662.97156212]\n",
+      "Predection using Ridge Regression:  [113662.79439384]\n",
+      "Correct value is: 118800.0\n"
      ]
     }
    ],
@@ -1334,14 +1334,27 @@
     "Ridge_Reg.fit(x_train, y_train)\n",
     "\n",
     "#Testing using the first feature in testing dataset as its Median House Value is 100000.0\n",
-    "y_pred_linear = linear_Reg.predict(x_test.iloc[[0]])\n",
-    "y_pred_lasso = Lasso_Reg.predict(x_test.iloc[[0]])\n",
-    "y_pred_ridge = Ridge_Reg.predict(x_test.iloc[[0]])\n",
+    "y_pred_linear = linear_Reg.predict(x_test.iloc[[1]])\n",
+    "y_pred_lasso = Lasso_Reg.predict(x_test.iloc[[1]])\n",
+    "y_pred_ridge = Ridge_Reg.predict(x_test.iloc[[1]])\n",
     "\n",
     "print(\"Predection using Linear Regression:\",y_pred_linear)\n",
     "print(\"Predection using Lasso Regression: \",y_pred_lasso)\n",
     "print(\"Predection using Ridge Regression: \",y_pred_ridge)\n",
-    "print(\"Correct value is:\", y_test.iloc[0])"
+    "print(\"Correct value is:\", y_test.iloc[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Copy_x() : ensures the original data is not modified during fitting when it's true, false : overwrite\n",
+    "\n",
+    "fit_intercept() : add bias (intercept) to the regression equation when it's true y = wx+b\n",
+    "\n",
+    "max_iter() : maximum number of iterations for the Lasso solver to converge when the change in coefficients between iterations is small\n",
+    "\n",
+    "alpha : Hyperparameters that controls the reguralization, higher values = stronger reguralization which prevents the overfitting"
    ]
   },
   {
@@ -1352,26 +1365,118 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Task 2.2.1: Creating the models"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LinearRegression,Ridge,Lasso\n",
     "\n",
-    "linear_Reg = LinearRegression(copy_X=True,fit_intercept=False)\n",
-    "Lasso_Reg = Lasso(max_iter=100000)\n",
-    "Ridge_Reg = Ridge()\n",
-    "\n",
-    "# Train the model using the training dataset\n",
+    "linear_Reg = LinearRegression()\n",
+    "Lasso_Reg =  Lasso(max_iter=100000)\n",
+    "Ridge_Reg =  Ridge()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Task 2.2.2: Training the models using the training dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-5 {color: black;}#sk-container-id-5 pre{padding: 0;}#sk-container-id-5 div.sk-toggleable {background-color: white;}#sk-container-id-5 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-5 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-5 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-5 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-5 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-5 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-5 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-5 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-5 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-5 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-5 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-5 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-5 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-5 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-5 div.sk-item {position: relative;z-index: 1;}#sk-container-id-5 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-5 div.sk-item::before, #sk-container-id-5 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-5 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-5 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-5 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-5 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-5 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-5 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-5 div.sk-label-container {text-align: center;}#sk-container-id-5 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-5 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-5\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>Ridge()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" checked><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">Ridge</label><div class=\"sk-toggleable__content\"><pre>Ridge()</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "Ridge()"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "linear_Reg.fit(x_train, y_train)\n",
     "Lasso_Reg.fit(x_train, y_train)\n",
-    "Ridge_Reg.fit(x_train, y_train)\n",
-    "\n",
-    "# Predicting using the validation dataset\n",
+    "Ridge_Reg.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Task 2.2.3: Predicting using the validation dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Linear Regression  Lasso Regression  Ridge Regression  Correct value\n",
+      "     117112.594987     117113.832282     117121.144205       122500.0\n",
+      "     332653.976787     332657.066504     332660.644661       320400.0\n",
+      "     406311.595656     406309.117015     406304.110360       450700.0\n",
+      "     285959.267964     285962.046501     285967.890568       234300.0\n",
+      "     186718.315945     186719.368763     186721.651236       101900.0\n",
+      "      57904.216887      57897.028629      57886.981448        48700.0\n",
+      "      43141.269106      43135.308827      43127.656783        54000.0\n",
+      "     217968.407054     217968.259708     217968.669346       224100.0\n",
+      "     183371.995623     183371.391487     183374.949130       111400.0\n",
+      "      75538.571789      75530.566660      75519.163012        90000.0\n",
+      "      25739.435676      25730.448283      25700.507057        66700.0\n",
+      "     145276.319729     145288.790094     145309.784505        95800.0\n",
+      "     313234.255338     313236.547851     313241.843805       222100.0\n",
+      "     235701.602749     235703.137246     235712.632336       342200.0\n",
+      "     198076.782966     198078.086623     198080.089734       138000.0\n",
+      "     275995.896400     275988.761557     275975.060830       290400.0\n",
+      "     282864.683996     282865.421248     282866.115544       195800.0\n",
+      "     190225.294219     190226.033686     190226.543435       151500.0\n",
+      "      47213.136007      47212.319186      47213.880695        63000.0\n",
+      "     232542.127626     232537.897186     232529.942723       352800.0\n"
+     ]
+    }
+   ],
+   "source": [
     "y_pred_linear = linear_Reg.predict(x_valid)\n",
-    "y_pred_lasso = Lasso_Reg.predict(x_valid)\n",
-    "y_pred_ridge = Ridge_Reg.predict(x_valid)"
+    "y_pred_lasso  = Lasso_Reg.predict(x_valid)\n",
+    "y_pred_ridge  = Ridge_Reg.predict(x_valid)\n",
+    "\n",
+    "results_df = pd.DataFrame({\n",
+    "                            'Linear Regression': y_pred_linear,\n",
+    "                            'Lasso Regression': y_pred_lasso,\n",
+    "                            'Ridge Regression': y_pred_ridge,\n",
+    "                            'Correct value': y_valid\n",
+    "                            })\n",
+    "\n",
+    "# Print the first few rows of the DataFrame\n",
+    "print(results_df.head(20).to_string(index=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Task 2.2.4: Displaying the predications and showing accuracy"
    ]
   },
   {
@@ -1385,18 +1490,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task 3.1: Calculating MAE & MSE for each regression type"
+    "Task 3.1: Calculating MAE & MSE for each regression type "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
-    "\n",
+    "best_regression = None\n",
     "# Calculate MAE and MSE for each regression model\n",
     "MAE_linear = mean_absolute_error(y_valid, y_pred_linear)\n",
     "MSE_linear = mean_squared_error(y_valid, y_pred_linear)\n",
@@ -1417,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1487,11 +1592,58 @@
     "    'MAE': [MAE_linear, MAE_lasso, MAE_ridge],\n",
     "    'MSE': [MSE_linear, MSE_lasso, MSE_ridge]\n",
     "}\n",
-    "\n",
     "results_df = pd.DataFrame(data)\n",
-    "\n",
     "# Display the results in a tabular format\n",
     "display(results_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Task 3.3: Finding the lowest MAE & MSE (Best Regression)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Regression (MAE): Linear Regression\n",
+      "Best Regression (MSE): Linear Regression\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find the best regression based on lowest MAE\n",
+    "lowest_MAE = min(MAE_linear, MAE_lasso, MAE_ridge)\n",
+    "best_regression_mae = None\n",
+    "\n",
+    "if lowest_MAE == MAE_linear:\n",
+    "    best_regression_mae = 'Linear Regression'\n",
+    "elif lowest_MAE == MAE_lasso:\n",
+    "    best_regression_mae = 'Lasso Regression'\n",
+    "elif lowest_MAE == MAE_ridge:\n",
+    "    best_regression_mae = 'Ridge Regression'\n",
+    "\n",
+    "# Find the best regression based on lowest MSE\n",
+    "lowest_MSE = min(MSE_linear, MSE_lasso, MSE_ridge)\n",
+    "best_regression_mse = None\n",
+    "\n",
+    "if lowest_MSE == MSE_linear:\n",
+    "    best_regression_mse = 'Linear Regression'\n",
+    "elif lowest_MSE == MSE_lasso:\n",
+    "    best_regression_mse = 'Lasso Regression'\n",
+    "elif lowest_MSE == MSE_ridge:\n",
+    "    best_regression_mse = 'Ridge Regression'\n",
+    "\n",
+    "# Print the best regression based on MAE and MSE\n",
+    "print(\"Best Regression (MAE):\", best_regression_mae)\n",
+    "print(\"Best Regression (MSE):\", best_regression_mse)"
    ]
   }
  ],
